gap fixed

--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   justify-items: center;
 
-  gap: 20px;
+  gap: 48px;
   padding: 30px;
   margin: 0 auto;
 
